// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`location User navigates to location 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
      testID="button-view-pad"
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginBottom": 32,
              "marginVertical": 8,
              "textAlign": "left",
            }
          }
          testID="labelTitle"
        >
          Allow Location
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "marginTop": "50%",
              "paddingHorizontal": 36,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/blocks/location/assets/location.png",
              }
            }
            style={
              Object {
                "height": 90,
                "width": 64,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#000",
                "fontFamily": "Roboto-Bold",
                "fontSize": 16,
                "marginTop": 14,
              }
            }
          >
            Allow Location
          </Text>
          <Text
            style={
              Object {
                "color": "#000",
                "fontFamily": "Roboto-Regular",
                "fontSize": 12,
                "marginTop": 5,
              }
            }
          >
            We need your permission to access your location
          </Text>
          <View
            style={
              Object {
                "marginTop": 25,
                "width": "100%",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.7}
              onPress={[Function]}
              style={
                Object {
                  "backgroundColor": "#4b419f",
                  "borderRadius": 20,
                  "elevation": 2,
                  "height": 38,
                  "padding": 10,
                }
              }
              testID="btnAllowLocation"
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 13,
                    "textAlign": "center",
                  }
                }
              >
                Allow Location
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.7}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#4b419f",
                    "borderRadius": 20,
                    "elevation": 2,
                    "height": 38,
                    "padding": 10,
                  },
                  Object {
                    "marginTop": 8,
                  },
                ]
              }
              testID="btnDenyLocation"
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 13,
                    "textAlign": "center",
                  }
                }
              >
                Do not Allow
              </Text>
            </TouchableOpacity>
          </View>
        </View>
        <Loader
          loading={false}
        />
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</View>
`;

exports[`location User navigates to location 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
      testID="button-view-pad"
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginBottom": 32,
              "marginVertical": 8,
              "textAlign": "left",
            }
          }
          testID="labelTitle"
        >
          Allow Location
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "marginTop": "50%",
              "paddingHorizontal": 36,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/blocks/location/assets/location.png",
              }
            }
            style={
              Object {
                "height": 90,
                "width": 64,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#000",
                "fontFamily": "Roboto-Bold",
                "fontSize": 16,
                "marginTop": 14,
              }
            }
          >
            Allow Location
          </Text>
          <Text
            style={
              Object {
                "color": "#000",
                "fontFamily": "Roboto-Regular",
                "fontSize": 12,
                "marginTop": 5,
              }
            }
          >
            We need your permission to access your location
          </Text>
          <View
            style={
              Object {
                "marginTop": 25,
                "width": "100%",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.7}
              onPress={[Function]}
              style={
                Object {
                  "backgroundColor": "#4b419f",
                  "borderRadius": 20,
                  "elevation": 2,
                  "height": 38,
                  "padding": 10,
                }
              }
              testID="btnAllowLocation"
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 13,
                    "textAlign": "center",
                  }
                }
              >
                Allow Location
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.7}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "#4b419f",
                    "borderRadius": 20,
                    "elevation": 2,
                    "height": 38,
                    "padding": 10,
                  },
                  Object {
                    "marginTop": 8,
                  },
                ]
              }
              testID="btnDenyLocation"
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 13,
                    "textAlign": "center",
                  }
                }
              >
                Do not Allow
              </Text>
            </TouchableOpacity>
          </View>
        </View>
        <Loader
          loading={false}
        />
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</View>
`;

exports[`location User navigates to location 3`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
      testID="button-view-pad"
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginBottom": 32,
              "marginVertical": 8,
              "textAlign": "left",
            }
          }
          testID="labelTitle"
        >
          Allow Location
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "paddingBottom": 40,
            }
          }
        />
        <Loader
          loading={false}
        />
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</View>
`;

exports[`location User navigates to location 4`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
      testID="button-view-pad"
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginBottom": 32,
              "marginVertical": 8,
              "textAlign": "left",
            }
          }
          testID="labelTitle"
        >
          Allow Location
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "paddingBottom": 40,
            }
          }
        >
          <View
            key="temp_city_0"
            style={
              Object {
                "flex": 1,
                "width": "95%",
              }
            }
          />
          <View
            key="temp_city_1"
            style={
              Object {
                "flex": 1,
                "width": "95%",
              }
            }
          />
          <View
            key="temp_city_2"
            style={
              Object {
                "flex": 1,
                "width": "95%",
              }
            }
          />
          <View
            key="temp_city_3"
            style={
              Object {
                "flex": 1,
                "width": "95%",
              }
            }
          />
        </View>
        <Loader
          loading={false}
        />
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</View>
`;

exports[`location User navigates to location 5`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
      testID="button-view-pad"
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginBottom": 32,
              "marginVertical": 8,
              "textAlign": "left",
            }
          }
          testID="labelTitle"
        >
          Allow Location
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "paddingBottom": 40,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            key="1"
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "borderColor": "#f5f5f5",
                "borderRadius": 10,
                "borderWidth": 1,
                "height": 170,
                "marginVertical": 10,
                "paddingVertical": 5,
                "width": "100%",
              }
            }
            testID="btnSelectCity_1"
          />
          <TouchableOpacity
            activeOpacity={0.2}
            key="2"
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "borderColor": "#f5f5f5",
                "borderRadius": 10,
                "borderWidth": 1,
                "height": 170,
                "marginVertical": 10,
                "paddingVertical": 5,
                "width": "100%",
              }
            }
            testID="btnSelectCity_2"
          />
        </View>
        <Loader
          loading={false}
        />
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</View>
`;

exports[`location User navigates to location 6`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
      testID="button-view-pad"
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginBottom": 32,
              "marginVertical": 8,
              "textAlign": "left",
            }
          }
          testID="labelTitle"
        >
          Allow Location
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "paddingBottom": 40,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            key="1"
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "borderColor": "#f5f5f5",
                "borderRadius": 10,
                "borderWidth": 1,
                "height": 170,
                "marginVertical": 10,
                "paddingVertical": 5,
                "width": "100%",
              }
            }
            testID="btnSelectCity_1"
          />
          <TouchableOpacity
            activeOpacity={0.2}
            key="2"
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "borderColor": "#f5f5f5",
                "borderRadius": 10,
                "borderWidth": 1,
                "height": 170,
                "marginVertical": 10,
                "paddingVertical": 5,
                "width": "100%",
              }
            }
            testID="btnSelectCity_2"
          />
        </View>
        <Loader
          loading={false}
        />
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</View>
`;
